--- a/www/public/css/default.css
+++ b/www/public/css/default.css
@@ -52,12 +52,26 @@ hr {
 	background-color: $color;
 }
 
-#artists{
+#artists, #art{
 	margin: 0 30px;
 	text-align: center;
 }
-#artists form {
+#artists form, #art form {
 	text-align: left
+}
+form#editArtist, form#editArt {
+	display: none;
+}
+/*form#editArtist p {
+	color: white;
+	border-radius: 10px;
+}*/
+form .row {
+	margin: 0 auto;
+}
+form .btn:hover  {
+	cursor: pointer;
+	background-color: $blue;
 }
 #artists form input {
 	margin-right: 20px;
@@ -81,8 +95,63 @@ hr {
 	text-align: center;
 	text-decoration: underline;
 }
+#artists table td.col-3 {
+	word-wrap: break-word;
+}
+#artDisplay {
+	text-align: left;
+}
+#art .tile {
+	display: inline-block;
+	border: 2px solid black;
+	height: auto;
+	width: auto;
+	max-width: 240px;
+	margin: 30px;
+}
+#art .tile .name {
+	border-bottom: solid black 2px;
+	text-align: center;
+}
+#art .tile img {
+	width: 100%;
+	position: relative;
+	top: -8px;
+}
+#art .tile .desc {
+	
+}
+#art .tile .price {
+	position: relative;
+	padding: 10px;
+	top: 8px;
+	background-color: $blue;
+	color: $yellow;
+	text-align: center;
+}
+#art .tile .price:hover {
+	cursor: pointer;
+}
+#art .glyphE {
+	position: relative;
+	top: -38px;
+	color: white;
+	left: 8px;
+}
+#art .glyphD {
+	position: relative;
+	top: -39px;
+	left: 180px;
+}
+.glyphE, .glyphD {
+	z-index: 10;
+}
+
+
+
+
 .fa-remove {
-	color: red;
+	color: $red;
 }
 footer { 
 	color: white;
