--- a/www/views/layout.html
+++ b/www/views/layout.html
@@ -17,6 +17,12 @@
 <body>
 
 	<div class="container-background">
+			<nav><ul>
+				<li><a href="/"><h5>Home</h5></a></li>
+				<li><a href="/Artists"><h5>Artists</h5></a></li>
+				<li><a href="/Art"><h5>Art</h5></a></li>
+			</ul></nav>
+			
 		<div class="container">
 			<br />
 			@{body}
