--- a/www/views/artists.html
+++ b/www/views/artists.html
@@ -4,17 +4,25 @@
 	<div id="form">
 		<form id='newArtist' action="/artists" method="post">
 			<h2 class='center'>Add New Artist</h2>
-
-			<div class='row'>
-				<label class='col col-2' for="fname">First Name: </label><input class='col col-3' name='fname' type="text" placeholder="John">
-				<label class='col col-2' for="lname">Last Name: </label><input class='col col-3' name='lname' type="text" placeholder="Smith">
+			
+			<br>
+			
+			<div class='ro'>
+				<label class='col col-3' for="fname">First Name: </label><input class='col col-3' name='fname' type="text" placeholder="John" autofocus required>
+			
+				<br>
+			
+				<label class='col col-3' for="lname">Last Name: </label><input class='col col-3' name='lname' type="text" placeholder="Smith" required>
 			</div>
 			
 			<br>
 			
-			<div class='row'>
-				<label class='col col-2' for="dob">Date of Birth: </label><input class='col col-3' name='dob' type="date">
-				<label class='col col-2' for="email">Email: </label><input class='col col-3' name='email' type="text" placeholder="youremail@domain.com">
+			<div class='ro'>
+				<label class='col col-3' for="dob">Date of Birth: </label><input class='col col-3' name='dob' type="date">
+			
+				<br>
+
+				<label class='col col-3' for="email">Email: </label><input class='col col-3' name='email' type="text" placeholder="youremail@domain.com" required>
 			</div>
 
 			<br>
@@ -23,12 +31,15 @@
 
 		<form id='editArtist' action="" method="put">
 			<h2 class='center'>Edit Artist</h2>
+
+			<br>
+
 			<input type="hidden" name='id'>
-			<label for="fname">First Name: </label><input name='fname' type="text" placeholder="John">
-			<label for="lname">Last Name: </label><input name='lname' type="text" placeholder="Smith">
+			<label for="fname">First Name: </label><input name='fname' type="text" placeholder="John" required>
+			<label for="lname">Last Name: </label><input name='lname' type="text" placeholder="Smith" required>
 			<br>
 			<label for="dob">Date of Birth: </label><input name='dob' type="date">
-			<label for="email">Email: </label><input name='email' type="text" placeholder="youremail@domain.com">
+			<label for="email">Email: </label><input name='email' type="text" placeholder="youremail@domain.com" required>
 			<br>
 			<br>
 			<input type="submit" class='btn'>
@@ -61,7 +72,7 @@
 				<td class='cl col-1'>@{i.id}</td>
 				<td class='cl col-2'>@{i.first_name}</td>
 				<td class='cl col-2'>@{i.last_name}</td>
-				<td class='cl col-2'>@{i.dob.format('dd MMMM yyyy')}</td>
+				<td class='cl col-2' rel='@{i.dob.format("yyyy-MM-dd")}'>@{i.dob.format('dd MMMM yyyy')}</td>
 				<td class='cl col-3'>@{i.email}</td>
 				<td class='col-1'><a class='glyphE' href="#form" data-get-edit-url='/artists/@{i.id}/edit' data-make-edit-url='/artists/@{i.id}'><span class='fa fa-edit fa-2x'></span></a></td>
 				<td class='col-1'><a class='glyphD' data-url='/artists/@{i.id}'><span class='fa fa-remove fa-2x'></span></a></td>
