added flash messages and index page, working on dynamic page updates for Arts

--- a/www/public/css/default.css
+++ b/www/public/css/default.css
@@ -61,15 +61,19 @@ hr {
 	display: inline-block;
 	position: relative;
 	padding: 15px 80px;
-	color: $color;
-	border: 1px solid $color;
+	color: $blue;
+	border: 1px solid $blue;
 	text-decoration: none;
 	border-radius: 4px;
 }
 
 .linkbutton:hover { 
 	color: white;
-	background-color: $color;
+	background-color: $blue;
+}
+
+div#welcome {
+	margin: 0 10vw;
 }
 
 #artists, #art{
