--- a/www/views/art.html
+++ b/www/views/art.html
@@ -52,8 +52,11 @@
 			<br>
 		</form>
 		
-		@{if repository.flash}
+		@{if repository.flash == 'edits_saved'}
 			<p class='success'>Your changes were successfully saved.</p>
+		@{fi}
+		@{if repository.flash == 'added'}
+			<p class='success'>Your artist was successfully added.</p>
 		@{fi}
 	</div>
 
