--- a/www/views/index.html
+++ b/www/views/index.html
@@ -1,11 +1,25 @@
 @{title('Something awesome')}
+<div id="home">		
+	<h4 class='center'>
+		Hi! Welcome to my gallery of Artists and Art where you can:
+	</h4>
 
-<hr />
-<br />
-<p class="center">
-	The Node.js framework for all web developers with everything what you need.<br />
-	<b>Create something awesome.</b>
-</p>
-<br />
-<br />
-<div class="center"><a href="http://docs.totaljs.com" class="linkbutton">DOCUMENTATION</a></div>
+	<br />
+	
+	<div id='welcome'>
+		<ul>
+			<li>View, create, update and delete Artists and their Art. </li>
+			<li>It is recommended to start by visiting the Artists' page and picking an artist who's work to view.</li>
+			<li>You can also view the Art alone by visiting the Art page.</li>
+			<li>This library was built using Total.js, Bootstrap, jQuery, PostreSQL, and Font Awesome.</li>
+			<li>Please, note features such as flash messages, autofocusing, dynamic page updates, etc.</li>
+			<li>To go to the Artists page, click on the link below.</li>
+		</ul>
+	</div>
+
+
+
+	<br />
+	<br />
+	<div class="center"><a href="/artists" class="linkbutton">Click me to begin</a></div>
+</div>
