--- a/www/views/index.html
+++ b/www/views/index.html
@@ -11,8 +11,8 @@
 			<li>View, create, update and delete Artists and their Art. </li>
 			<li>It is recommended to start by visiting the Artists' page and picking an artist who's work to view.</li>
 			<li>You can also view the Art alone by visiting the Art page.</li>
-			<li>This library was built using Total.js, Bootstrap, jQuery, PostreSQL, and Font Awesome.</li>
-			<li>Please, note features such as flash messages, autofocusing, dynamic page updates, etc.</li>
+			<li>This library was built using Total.js, Bootstrap, jQuery, Font Awesome, PostreSQL.</li>
+			<li>Please, note the responsive design as well as features such as flash messages, autofocusing, dynamic page updates, etc.</li>
 			<li>To go to the Artists page, click on the link below.</li>
 		</ul>
 	</div>
