--- a/www/views/art.html
+++ b/www/views/art.html
@@ -2,10 +2,13 @@
 
 <div id="art">
 	<div id="form">
-		<form id='newArt' action="/artists/@{model[0].artist_id}/art" method="post">
+
+		<form id='newArt' action="/artists/@{model[0].artist_id}/art" method="post" @{if repository.art.art_id} style='display:none' @{fi}>
 			<h2 class='center'>Add New Art</h2>
+
+			<br>	
 				
-				<input type="hidden" name='artist_id' value='@{model[0].artist_id}'>
+			<input type="hidden" name='artist_id' value='@{model[0].artist_id}'>
 			<div class='ro'>
 				<label class='col col-2' for="name">Name: </label><input form='newArt' class='col col-3' name='name' type="text" placeholder="art name" autofocus required>
 				<br>
@@ -25,22 +28,25 @@
 		</form>
 
 
-		<form id='editArt' action="" method="put">
+		<form id='editArt' action="@{repository.art.url}" method="put" @{if repository.art.art_id} style='display:block' @{fi}>
 			<h2 class='center'>Edit Art</h2>
 
-			<input type="hidden" name='id'}'>
-			<input type="hidden" name='artist_id'}'>
+			<br>
+
+			<input type="hidden" name='id' value="@{repository.art.art_id}">
+			<input type="hidden" name='artist_id' value="@{repository.art.artist_id}">
 			
 			<div class="ro">
-				<label class='col col-2' for="name">Name: </label><input form='editArt' class='col col-3' name='name' type="text" placeholder="art name" required>
+				<label class='col col-2' for="name">Name: </label><input form='editArt' class='col col-3' name='name' type="text" placeholder="art name" value="@{repository.art.name}" required>
 				<br>
-				<label class='col col-2' for="price">Price: $</label><input form='editArt' class='col col-3' name='price' type="number" step="any">
+				<label class='col col-2' for="price">Price: $</label><input form='editArt' class='col col-3' name='price' type="number" step="any" value="@{repository.art.price}">
 			
+
 				<br>
 				<br>
 			
 		 		<legend for='desc'>Description:</legend>
-		  	<textarea name="desc" id="" cols="70" rows="5"></textarea>
+		  	<textarea name="desc" id="" cols="70" rows="5">@{repository.art.desc}</textarea>
 			</div>
 
 			<br>
@@ -71,7 +77,7 @@
 			<div class="tile">
 				<input type="hidden" value=@{i.art_id}>
 				<input type="hidden" value=@{i.artist_id}>
-				<h4 class='name'>@{i.name}</h4>
+				<h4 class='name'><b>@{i.name}</b></h4>
 				<img src="/i/iris_garden.jpg" alt="">
 				<p class='desc'>@{i.description}</p>
 				
