--- a/www/views/layout.html
+++ b/www/views/layout.html
@@ -9,7 +9,7 @@
 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
 
@@ -19,6 +19,7 @@
 
 	<div class="container-background">
 			<nav><ul>
+				<li>Awesome Gallery</li>
 				<li><a href="/"><h5>Home</h5></a></li>
 				<li><a href="/Artists"><h5>Artists</h5></a></li>
 				<li><a href="/Art"><h5>Art</h5></a></li>
