cleaned up code and fixed some bugs

--- a/www/public/css/default.css
+++ b/www/public/css/default.css
@@ -203,6 +203,10 @@ form .btn:hover  {
 .success {
 	color: $green;
 }
+div#form p.success{
+	position: relative;
+	left: -9vw;
+}
 .fa-remove {
 	color: $red;
 }
