--- a/www/views/art.html
+++ b/www/views/art.html
@@ -26,7 +26,7 @@
 			<input type="submit" class='btn'>
 		</form>
 
-		<form id='editArt' action="@{repository.art.url}" method="put" @{if repository.art.art_id} style='display:block' @{fi}>
+		<form id='editArt' data-action="@{repository.art.url}" method="put" @{if repository.art.art_id} style='display:block' @{fi}>
 			<h2 class='center'>Edit Art</h2>
 
 			<br>
