--- a/www/views/arts.html
+++ b/www/views/arts.html
@@ -21,7 +21,7 @@
 				<p class='desc'>@{i.description}</p>
 				
 				<div class="bottom">
-					<a class='glyphE' href="/artists/@{i.artist_id}/art?artist_id=@{i.artist_id}&art_id=@{i.art_id}&name=@{i.name}&price=@{i.price}&desc=@{i.description}&url=artists/@{i.artist_id}/art/@{i.art_id}"><span class='fa fa-edit fa-2x'></span></a>
+					<a class='glyphE' href="/artists/@{i.artist_id}/art?artist_id=@{i.artist_id}&art_id=@{i.art_id}&name=@{i.name}&price=@{i.price}&desc=@{i.description}&url=/artists/@{i.artist_id}/art/@{i.art_id}"><span class='fa fa-edit fa-2x'></span></a>
 					<h3 class='price'>@{i.price}</h3>
 					<a class='glyphD' data-url='/artists/@{i.artist_id}/art/@{i.art_id}'><span class='fa fa-remove fa-2x'></span></a>
 				</div>	
