code cleanup and added dynamic auto-focusing for edits

--- a/www/views/art.html
+++ b/www/views/art.html
@@ -35,7 +35,7 @@
 			<input type="hidden" name='artist_id' value="@{repository.art.artist_id}">
 			
 			<div class="ro">
-				<label class='col col-2' for="name">Name: </label><input form='editArt' class='col col-3' name='name' type="text" placeholder="art name" value="@{repository.art.name}" required>
+				<label class='col col-2' for="name">Name: </label><input form='editArt' class='col col-3' name='name' type="text" placeholder="art name" value="@{repository.art.name}" required autofocus>
 				<br>
 				<label class='col col-2' for="price">Price: $</label><input form='editArt' class='col col-3' name='price' type="number" step="any" value="@{repository.art.price}">
 			
