--- a/www/views/artists.html
+++ b/www/views/artists.html
@@ -36,7 +36,7 @@
 				
 			<div class="ro">
 				<input type="hidden" name='id'>
-				<label class='col col-2' for="fname">First Name: </label><input class='col col-3' name='fname' type="text" placeholder="John" required>
+				<label class='col col-2' for="fname">First Name: </label><input class='col col-3' name='fname' type="text" placeholder="John" required autofocus='autofocus'>
 				<br>
 				<label class='col col-2' for="lname">Last Name: </label><input class='col col-3' name='lname' type="text" placeholder="Smith" required>
 			</div>
